--- a/product-main.css
+++ b/product-main.css
@@ -1,8 +1,8 @@
             body {
                 margin: 0;
-                background-color: rgb(255, 255, 190);
                 background-image: url("background.jpg");
-                background-size: 100% 130%;
+                background-size: 120% 200%;
+                ;
                 font-weight: bold;
                 color: green;
             }
@@ -50,7 +50,7 @@
                 border-radius: 1rem;
                 border-color: yellowgreen;
                 border-width: 0.1rem;
-                width: 25rem;
+                width: 60%;
                 height: 3rem;
                 margin: 1rem;
                 padding: 0.5rem;
@@ -64,7 +64,7 @@
             }
             
             input {
-                width: 100%;
+                width: 60%;
                 background: #e0dede;
                 justify-content: center;
                 display: flex;
@@ -115,7 +115,7 @@
                 display: flex;
                 flex-direction: column;
                 position: relative;
-                top: 7rem;
+                top: 0rem;
                 align-items: center;
             }
             
